Add gridview widget

--- a/app/config.json
+++ b/app/config.json
@@ -8,5 +8,7 @@
 	"os:ios": {},
 	"os:mobileweb": {},
 	"os:windows": {},
-	"dependencies": {}
+	"dependencies": {
+		"com.prodz.tiflexigrid":"1.2"
+	}
 }
